frontend/pipeline/pipeline-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: tcp-http
    protocol: TCP
    appProtocol: tcp
    port: 80
    targetPort: 3000
  selector:
    app: fastmdm
    component: frontend
