frontend/pipeline/pipeline-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  tls:
    - hosts:
        - "#{frontend-url}#"
      secretName: fastmdm-com-prod-tls
  rules:
  - host: "#{frontend-url}#"
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /i18n
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /content-manager
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
